<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.flir.cloud.ui.Views.LambdaCustomProgressBar
        android:id="@+id/lambda_custom_progress_bar_settings_dialog"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

    </com.flir.cloud.ui.Views.LambdaCustomProgressBar>

    <LinearLayout
        android:id="@+id/ll_share_custom_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.16"
            android:textSize="22sp"
            android:gravity="center"
            android:text="@string/acl_share_device_dialog_title"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.16"
            android:textSize="16sp"
            android:text="@string/acl_share_device_dialog_content"/>

        <EditText
            android:id="@+id/et_share_device_dialog"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.16"
            android:hint="@string/acl_share_device_dialog_hint"/>

        <ImageButton
            android:id="@+id/btn_share_device_dialog"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.16"
            android:src="@drawable/ic_share_symbol"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.16"
          />

        <TextView
            android:id="@+id/tv_un_share_device"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.16"
            android:textSize="16sp"
            android:text="@string/acl_un_share_device_dialog_content"/>
        <Spinner
            android:id="@+id/spinner_un_share_chooser"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.16"
            />

        <ImageButton
            android:id="@+id/btn_un_share_device_dialog"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.16"
            android:src="@drawable/ic_un_share_icon"/>




    </LinearLayout>




</LinearLayout>