<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.Authentication.SignUp.SignUpActivity"
    android:background="@color/flir_color_primary"
    android:gravity="center">


    <com.flir.cloud.ui.Views.LambdaCustomProgressBar
        android:id="@+id/lambda_custom_progress_bar_sign_up"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

    </com.flir.cloud.ui.Views.LambdaCustomProgressBar>

    <ImageView
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_width="150dp"
        android:layout_gravity="center"
        android:src="@drawable/flir_logo_white_color"
        />
    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_first_name"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3"
        android:theme="@style/TextLabel"
        android:gravity="center">

        <EditText
            android:id="@+id/input_first_name"
            android:layout_width="220dp"
            android:layout_height="30dp"
            android:ems="10"
            android:background="@color/sign_up_page_edit_text_background"
            android:textColor="@color/login_page_edit_text_color"
            android:hint="@string/first_name"
            android:inputType="textPersonName"
            android:maxLines="1" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_last_name"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3"
        android:theme="@style/TextLabel"
        android:gravity="center">

        <EditText
            android:id="@+id/input_last_name"
            android:layout_width="220dp"
            android:layout_height="30dp"
            android:background="@color/sign_up_page_edit_text_background"
            android:ems="10"
            android:textColor="@color/login_page_edit_text_color"
            android:hint="@string/last_name"
            android:inputType="textPersonName"
            android:maxLines="1" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_email"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3"
        android:theme="@style/TextLabel"
        android:gravity="center">

        <EditText
            android:id="@+id/input_email"
            android:layout_width="220dp"
            android:layout_height="30dp"
            android:background="@color/sign_up_page_edit_text_background"
            android:ems="10"
            android:hint="@string/email"
            android:textColor="@color/login_page_edit_text_color"
            android:inputType="textEmailAddress"
            android:maxLines="1" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_password"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3"
        android:theme="@style/TextLabel"
        android:gravity="center">

        <EditText
            android:id="@+id/input_password"
            android:layout_width="220dp"
            android:layout_height="30dp"
            android:background="@color/sign_up_page_edit_text_background"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@color/login_page_edit_text_color"
            android:maxLines="1" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_phone"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3"
        android:theme="@style/TextLabel"
        android:gravity="center">

        <EditText
            android:id="@+id/input_phone"
            android:layout_width="220dp"
            android:layout_height="30dp"
            android:background="@color/sign_up_page_edit_text_background"
            android:ems="10"
            android:textColor="@color/login_page_edit_text_color"
            android:hint="@string/phone"
            android:inputType="phone"
            android:maxLines="1" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/button_signup"
        android:layout_width="220dp"
        android:layout_height="0dp"
        android:layout_weight="0.2"
        android:layout_gravity="center"
        android:background="@drawable/thermal_background_api_selector"
        android:textColor="@color/colorPrimary"
        android:fontFamily="@font/industry_bold"
        android:layout_marginBottom="@dimen/signup_page_signup_button_margin_bottom"
        android:text="@string/signup" />

    <ProgressBar
        android:id="@+id/pb_signup"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:padding="10dp"
        android:visibility="gone"/>

</LinearLayout>
