<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.flir.cloud.ui.Views.LambdaCustomProgressBar
        android:id="@+id/lambda_custom_progress_bar_settings_dialog"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

    </com.flir.cloud.ui.Views.LambdaCustomProgressBar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_recording_mode"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.8"
            android:text="@string/switch_button_start_recording"
            android:textColor="#191970" />

        <Switch
            android:id="@+id/switch_recording_mode"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"

            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_resolution_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.8"
            android:text="@string/carousel_item_settings_resolution"
            android:textColor="#191970" />

        <Spinner
            android:id="@+id/spinner_resolution_chooser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
             />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_update_device"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/update_device_details"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.8"
            android:text="@string/acl_update_device"
            android:textColor="#191970" />

        <ImageButton
            android:id="@+id/btn_update_device_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="16dp"
            android:paddingStart="0dp"
            android:paddingRight="16dp"
            android:paddingLeft="0dp"
            android:background="@color/login_page_text_color"
            android:src="@drawable/ic_cloud_rename"
            />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/ll_change_time_zone"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/change_time_zone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.8"
            android:text="@string/change_time_zone"
            android:textColor="#191970" />

        <Spinner
            android:id="@+id/spinner_change_time_zone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

    </LinearLayout>


</LinearLayout>