<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.Authentication.Login.LoginActivity"
    android:background="@color/flir_color_primary">

    <com.flir.cloud.ui.Views.LambdaCustomProgressBar
        android:id="@+id/lambda_custom_progress_bar_change_password"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

    </com.flir.cloud.ui.Views.LambdaCustomProgressBar>


    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="@color/colorPrimary"/>
    <ImageView
        android:layout_width="@dimen/carousel_flir_icon_size"
        android:layout_height="@dimen/carousel_flir_icon_size"
        android:layout_gravity="top|center"
        android:src="@drawable/flir_logo_black_color" />


    <LinearLayout
        android:id="@+id/ll_change_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:visibility="visible"
        android:paddingTop="@dimen/password_page_edit_text_padding_top">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_old_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/input_old_password"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:ems="10"
                android:background="@color/flir_account_page_text_color"
                android:hint="@string/old_password"
                android:inputType="textPassword"
                android:maxLines="1" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_new_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/input_new_password"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:ems="10"
                android:hint="@string/new_password"
                android:background="@color/flir_account_page_text_color"
                android:inputType="textPassword"
                android:maxLines="1" />
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/input_confirm_password"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:ems="10"
                android:hint="@string/account_change_password_confirm_password"
                android:background="@color/flir_account_page_text_color"
                android:inputType="textPassword"
                android:maxLines="1" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/button_change_password"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/change_password_page_selector"
            android:textColor="@color/flir_color_primary"
            android:layout_gravity="center"
            android:text="@string/change_password" />


    </LinearLayout>

</LinearLayout>
